--- a/app/templates/booking/book.html
+++ b/app/templates/booking/book.html
@@ -16,22 +16,12 @@
                         
                         <div class="mb-3">
                             <label for="aircraft_id" class="form-label">Aircraft</label>
-                            <select class="form-select" id="aircraft_id" name="aircraft_id" required>
-                                <option value="">Select an aircraft</option>
-                                {% for aircraft in available_aircraft %}
-                                    <option value="{{ aircraft.id }}">{{ aircraft.display_name }}</option>
-                                {% endfor %}
-                            </select>
+                            {{ form.aircraft_id(class="form-select", id="aircraft_id") }}
                         </div>
                         
                         <div class="mb-3">
                             <label for="instructor_id" class="form-label">Instructor (Optional)</label>
-                            <select class="form-select" id="instructor_id" name="instructor_id">
-                                <option value="">No instructor</option>
-                                {% for instructor in available_instructors %}
-                                    <option value="{{ instructor.id }}">{{ instructor.full_name }}</option>
-                                {% endfor %}
-                            </select>
+                            {{ form.instructor_id(class="form-select", id="instructor_id") }}
                         </div>
                         
                         <div class="mb-3">
