--- a/app/templates/booking/list.html
+++ b/app/templates/booking/list.html
@@ -20,6 +20,7 @@
                                         <th>Student</th>
                                         <th>Instructor</th>
                                         <th>Aircraft</th>
+                                        <th>Info</th>
                                         <th>Start Time</th>
                                         <th>End Time</th>
                                         <th>Status</th>
@@ -32,6 +33,9 @@
                                             <td>{{ booking.student.full_name }}</td>
                                             <td>{{ booking.instructor.full_name if booking.instructor else 'N/A' }}</td>
                                             <td>{{ booking.aircraft.display_name }}</td>
+                                            <td>
+                                                <a href="{{ url_for('booking.aircraft_info', aircraft_id=booking.aircraft.id) }}" class="btn btn-sm btn-info">Info</a>
+                                            </td>
                                             <td><span class="utc-datetime" data-utc="{{ booking.start_time.isoformat() }}"></span></td>
                                             <td><span class="utc-datetime" data-utc="{{ booking.end_time.isoformat() }}"></span></td>
                                             <td>
