--- a/app/templates/admin/settings.html
+++ b/app/templates/admin/settings.html
@@ -46,7 +46,7 @@
                     <form id="generalSettingsForm">
                         <div class="mb-3">
                             <label for="schoolName" class="form-label">Flight School Name</label>
-                            <input type="text" class="form-control" id="schoolName" value="Next Level Tailwheel">
+                            <input type="text" class="form-control" id="schoolName" value="Tailwheel Addicts Aviation">
                         </div>
                         <div class="mb-3">
                             <label for="contactEmail" class="form-label">Contact Email</label>
